# CV-HW1

./: .gitignore  CMakeLists.txt  README.md
data/004_sugar_box/: annotations.txt  negative.txt  positives.vec
data/004_sugar_box/object_cascade/: cascade.xml  stage0.xml  stage1.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml
data/006_mustard_bottle/: annotations.txt  negative.txt  positives.vec
data/006_mustard_bottle/object_cascade/: cascade.xml  stage0.xml  stage1.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml
data/035_power_drill/: annotations.txt  negative.txt  positives.vec
data/035_power_drill/object_cascade/: cascade.xml  params.xml  stage0.xml  stage1.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml
include/: dbscan.hpp  detection.hpp  haar_detector.hpp  orb_detector.hpp  sift_detector.hpp
report/: main.tex
report/CV_Project1/: main.tex
report/img/: 35_0038_002606-box.jpg:Zone.Identifier
src/: dbscan.cpp  detect_object.cpp  detection.cpp  generate_annotations.cpp  generate_negative.cpp  haar_detector.cpp  orb_detector.cpp  performance.cpp  sift_detector.cpp  test_images_detection.cpp
